# MEGN540

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MEGN540_setup.sh  README.md  ROS_install.sh  clion_install.sh  generic-gcc-avr.cmake  open_serial_monitor  open_serial_monitor_joy
Lab0-Blink/: CMakeLists.txt  Lab0-blink.c  Makefile  led_interface.c  led_interface.h  main.c
Lab1-Serial/: CMakeLists.txt  Descriptors.c  Descriptors.h  Lab1.c  SerialIO.c  SerialIO.h  makefile
Lab2-Timing/: CMakeLists.txt  Lab2-Timers.c  makefile
Lab3-Encoder/: CMakeLists.txt  Lab3-Encoder.c  Makefile  makefile
Lab4-MotorPWM/: CMakeLists.txt  Lab4-MotorPWM.c  Makefile
Lab5-Control/: CMakeLists.txt  Lab5-Control.c  Makefile
SerialMonitor/: game_pad_interface.py  inputs_mod.py  install_dep.sh  serial_monitor.py  serial_monitor_joy.py  serial_monitor_lib.py  sys_id_template.csv
c_lib/: Battery_Monitor.c  Battery_Monitor.h  Controller.h  Encoder.c  Encoder.h  Filter.c  Filter.h  Lab1_Tasks.c  Lab1_Tasks.h  Lab2_Tasks.h  Lab3_Tasks.h  Lab4_Tasks.h  Lab5_Tasks.h  MEGN540_Lab_Tasks.c  MEGN540_Lab_Tasks.h  MEGN540_MessageHandeling.c  MEGN540_MessageHandeling.h  MEGN540_Message_Handeling.c  MEGN540_Message_Handeling.h  Message_Handeling.h  Message_Handling.c  Message_Handling.h  MotorPWM.h  Ring_Buffer.c  Ring_Buffer.h  SerialIO.c  SerialIO.h  Skid_Steer_Controller.h  Task_Management.c  Task_Management.h  Timing.c  Timing.h
c_lib/USB_Config/: Descriptors.c  Descriptors.h  LUFAConfig.h
